fixed Footer spacing issue

--- a/assets/stylesheets/sections/_footer.scss
+++ b/assets/stylesheets/sections/_footer.scss
@@ -48,3 +48,10 @@ footer.mw-footer {
   	}
 
 }
+
+@media only screen 
+and (min-width : 321px) {
+  .right {
+ 	margin-left: 20% !important;   
+  }
+}
